# Vulkan-Material-System

./: .gitignore  CMakeLists.txt
assets/: sphereuv.glb
shaders/: colored_triangle.frag  gradient.comp  main_frag.frag  main_vert.vert  sky.comp  tex_image.frag
src/: CMakeLists.txt  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_pipelines.cpp  vk_pipelines.h  vk_swapchain.cpp  vk_swapchain.h  vk_types.h
